# IlliniBlockchainPBC25

./: .env.example  .gitignore  README.md  bun.lockb  contract-config.json  coolkey  coolkey.pub  package-lock.json
aptos-project/backend/: requirements.txt
aptos-project/backend/aptos/: README.md  pyproject.toml
aptos-project/backend/aptos/src/aptos/: crew.py  main.py  report.md  test.py
aptos-project/backend/aptos/src/aptos/config/: agents.yaml  tasks.yaml
aptos-project/backend/aptos/src/aptos/db/: chroma.sqlite3
seismic-ipocross/: contract-config.json
