[project]
name = "aptos"
version = "0.1.0"
description = "aptos using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
aptos = "aptos.main:run"
run_crew = "aptos.main:run"
train = "aptos.main:train"
replay = "aptos.main:replay"
test = "aptos.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
